# gerbil-train

./: .gitignore  LICENSE  README.md  README_CH.md  ltr_experiment_results.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
checkpoints/ltr/: best_model_lambdarank.pth  best_model_listmle.pth  best_model_listnet.pth  best_model_mse.pth  best_model_ranknet.pth  training_curves_lambdarank_loss.txt  training_curves_lambdarank_metric.txt  training_curves_listmle_loss.txt  training_curves_listmle_metric.txt  training_curves_listnet_loss.txt  training_curves_listnet_metric.txt  training_curves_mse_loss.txt  training_curves_mse_metric.txt  training_curves_ranknet_loss.txt  training_curves_ranknet_metric.txt
configs/: build_model_config.py
docs/: 1-fm.md  1-ftrl.md  10-mimn.md  11-sim.md  12-mind.md  13-bst.md  14-eta.md  2-youtube_dnn.md  3-afm.md  3-nfm.md  3-pnn.md  4-wide_and_deep.md  6-autoint.md  6-dcn.md  6-dcnv2.md  7-dsin.md  99-shared_bottom_two_tower.md  deepfm.md  dien.md  din.md  feature_leakage_ctr.md  feature_leakage_in_multiclass.md  ftrl.md  gwen.md  xdeepfm.md
gerbil_train/: config.py  exceptions.py
tests/: embbag_text.py  test_base_trainer.py  test_binary_trainer.py  test_cli_smoke.py  test_cli_training.py  test_deepfm_cli.py  test_deepfm_dataset.py  test_deepfm_model.py  test_dien_model.py  test_fm_model.py  test_ftrl_model.py  test_gwen_collator.py  test_gwen_config.py  test_gwen_losses.py  test_gwen_model.py  test_inference_smoke.py  test_learningrate.py  test_wide_and_deep_model.py  test_youtube_dnn_model.py
(+257 files in other folders)
